# python-assignments

./: README.md  class1.py
.devcontainer/: devcontainer.json
assig1/: class1.py  module.py
assig3/: main.py
assign2/: main.py
assign4/: add.py  main.py
web8/: main.py
web9/: .env  auth.py  database.py  main.py  products.json  requirements.txt  utils.py
web9/models/: payment.py
webassig07/: README.md  pyproject.toml  requirement.txt  requirements.txt
webassig07 copy/: main.py
